# ytermusic

./: .gitignore  Cargo.toml  README.md  last-playlist.json  out.html  out.json  search.json
.github/workflows/: check.yml  ci.yml  clippy.yml  fmt.yml  release.yml  test-linux.yml  test-macos.yml  test-windows.yml
crates/common-structs/: Cargo.toml
crates/common-structs/src/: app_status.rs  lib.rs  music_download_status.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  reader.rs  writer.rs
crates/download-manager/: Cargo.toml
crates/download-manager/src/: lib.rs  task.rs
crates/player/: Cargo.toml
crates/player/src/: error.rs  lib.rs  player.rs  player_data.rs  player_options.rs
crates/player/src/rusty_backend/: mod.rs  sink.rs  stream.rs
crates/player/src/rusty_backend/decoder/: symphonia.rs
crates/player/src/rusty_backend/source/: periodic.rs  take.rs
crates/ytermusic/: Cargo.toml
crates/ytermusic/src/: config.rs  consts.rs  database.rs  errors.rs  main.rs  shutdown.rs  utils.rs
crates/ytermusic/src/database/: reader.rs  writer.rs
crates/ytermusic/src/structures/: app_status.rs  media.rs  mod.rs  music_status.rs  sound_action.rs
crates/ytermusic/src/systems/: mod.rs  player.rs
crates/ytermusic/src/tasks/: download.rs  local_musics.rs  mod.rs
crates/ytermusic/src/term/: item_list.rs  mod.rs  music_player.rs  playlist.rs  playlist_view.rs  search.rs  vertical_gauge.rs
crates/ytpapi2/: Cargo.toml
crates/ytpapi2/src/: json_extractor.rs  lib.rs
player/: Cargo.toml
player/src/rusty_backend/: dynamic_mixer.rs  mod.rs  queue.rs  sink.rs  stream.rs
player/src/rusty_backend/decoder/: mod.rs  read_seek_source.rs
player/src/rusty_backend/source/: done.rs
rustube/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
rustube/src/: error.rs  fetcher.rs  id.rs  lib.rs  video.rs
rustube/src/blocking/: descrambler.rs  fetcher.rs  mod.rs  video.rs
rustube/src/descrambler/: cipher.rs  mod.rs
rustube/src/serde_impl/: date_ymd.rs  mime_type.rs  mod.rs  range.rs  signature_cipher.rs  unix_timestamp_micro_secs.rs  unix_timestamp_secs.rs
rustube/src/stream/: callback.rs  mod.rs
rustube/src/video_info/: mod.rs
rustube/src/video_info/player_response/: microformat.rs  mod.rs  playability_status.rs  video_details.rs
rustube/src/video_info/player_response/streaming_data/: mod.rs
src/: config.rs  consts.rs  errors.rs  main.rs  terminal.rs  utils.rs
src/database/: mod.rs  reader.rs  writer.rs
src/structures/: app_status.rs  media.rs  mod.rs  music_status.rs  music_status_action.rs  performance.rs  sound_action.rs
src/systems/: download.rs  logger.rs  mod.rs  player.rs
src/tasks/: api.rs  clean.rs  download.rs  last_playlist.rs  local_musics.rs  mod.rs
src/term/: device_lost.rs  error_screen.rs  item_list.rs  list_selector.rs  list_selector_opt.rs  mod.rs  music_player.rs  playlist.rs  playlist_view.rs  search.rs  vertical_gauge.rs
ytpapi/: Cargo.toml  dd.txt  search.json
ytpapi/src/: lib.rs  main.rs  structs.rs
ytpapi2/: Cargo.toml
ytpapi2/src/: json_extractor.rs  lib.rs  string_utils.rs
