[package]
edition = "2021"
name = "ytermusic"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#  --- YT Download ---
rustube = { git = "https://github.com/Discursif/rustube", version = "0.6.0", features = [
	"download",
	"std",
	"rustls-tls",
	"callback",
], default-features = false }
ytpapi2 = { path = "./ytpapi2" }

#  --- Threading & Sync ---
flume = "0.10.12"
once_cell = "1.10.0"
tokio = { version = "*", features = ["rt-multi-thread"] }

#  --- Encoding ---
bincode = { version = "1.0.8" }
directories = "4.0.1"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
urlencoding = "2.1.0"
varuint = "0.6.0"

#  --- UI ---
crossterm = "0.23.2"
tui = { version = "0.17.0", features = ["serde"] }

#  --- Player ---
player = { path = "player" }

#  --- Media Control ---
souvlaki = "0.5.1"

#  --- Alloc ---
mimalloc = { version = "*", default-features = false }

#  --- Config ---
toml = "0.5.9"

[target."cfg(target_os = \"windows\")".dependencies]
raw-window-handle = "0.4.3"
winit = "0.26.1"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
