[package]
edition = "2021"
name = "ytermusic"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#  --- YT Download ---
# rustube = { git = "https://github.com/Discursif/rustube", version = "0.6.0", features = [
# 	"download",
# 	"std",
# 	"rustls-tls",
# 	"callback",
# ], default-features = false }
rusty_ytdl = { git = "https://github.com/Mithronn/rusty_ytdl/", branch = "main" }

ytpapi2 = { path = "./ytpapi2" }

#  --- Threading & Sync ---
flume = "0.11.0"
once_cell = "1.10.0"
tokio = { version = "*", features = ["rt-multi-thread"] }

#  --- Encoding ---
bincode = { version = "1.3.3" }
directories = "5.0.1"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
urlencoding = "2.1.3"
varuint = "0.6.0"

#  --- UI ---
crossterm = "0.27.0"
ratatui = { version = "0.26.0", features = ["serde"] }

#  --- Player ---
player = { path = "player" }

#  --- Media Control ---
souvlaki = "0.7.3"

#  --- Alloc ---
mimalloc = { version = "0.1.39", default-features = false }

#  --- Config ---
toml = "0.8.10"

#  --- Logging ---
log = "0.4.20"

[target."cfg(target_os = \"windows\")".dependencies]
raw-window-handle = "0.6.0"
winit = "0.29.10"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
