[package]
name = "ytpapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = [
    # "blocking",
    "gzip",
    "deflate",
    "cookies",
    "rustls",
], default-features = false }
# sha1 = "0.10.1"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
