[package]
name = "ytpapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = [
    "gzip",
    "deflate",
    "cookies",
    "rustls-tls",
], default-features = false }
# sha1 = "0.10.1"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.22.0", features = ["full"] }
