[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.11.0"
tokio = "1.36.0"
atomic_float = "0.1.0"
rodio = { version = "0.21.1", features = ["symphonia-all"] }
cpal = "0.15"